--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,40 @@
-name: Generate Snake
+name: generate animation
 
 on:
   # run automatically every 12 hours
   schedule:
-    - cron: "0 */12 * * *"
-
+    - cron: "0 */12 * * *" 
+  
   # allows to manually run the job at any time
   workflow_dispatch:
-
-
+  
+  # run on every push on the master branch
+  push:
+    branches:
+    - master
+  
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 10
+    
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: Platane/snk@v2
-        id: bylickilabs-Snake
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: 4nandaw
           outputs: |
-                     dist/github-snake-dark.svg?palette=github-dark
-
-# I     dist/github-snake.svg
-# II    dist/github-snake-dark.svg?palette=github-dark
-# III   dist/bylickilabs-Snake.svg?palette=github-dark&color_snake=red&color_dots=#000000F;#CDAD00;#EEC900;#FFD700;#FFD700;
-# IV    dist/bylickilabs-Snake.svg?palette=github-dark&color_snake=white&color_dots=#000000F;#5E5E5E;#787878;#919191;#BDBDBD;
-
-            
-      - run: git status
-
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+          
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
